<resources>
    <string name="app_name">calculator</string>
    <string name="calculator">CALCULATOR</string>
    <string name="add">Add</string>
    <string name="result">Result</string>
    <string name="subtract">Subtract</string>
    <string name="multiply">Multiply</string>
    <string name="division">Division</string>
    <string name="reset">Reset</string>
    <string name="num1">0</string>
    <string name="num2">0</string>
</resources>