<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A4949"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/calculator"
        android:textColor="#F8F5F5"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018" />

    <EditText
        android:id="@+id/num1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:textColor="#C8BFBF"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:textColor="#E4E1E1"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num1" />

    <Button
        android:id="@+id/sum"
        android:layout_width="175dp"
        android:layout_height="64dp"
        android:layout_marginTop="60dp"
        android:background="#514F4F"
        android:fontFamily="serif"
        android:onClick="doSum"
        android:text="@string/add"
        android:textSize="20sp"
        app:backgroundTint="#4A4949"
        app:layout_constraintEnd_toStartOf="@+id/sub"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical"
        android:inputType="number"
        android:textColor="#F4EAEA"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/sum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num2" />

    <Button
        android:id="@+id/sub"
        android:layout_width="182dp"
        android:layout_height="72dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="serif"
        android:onClick="doSub"
        android:text="@string/subtract"
        android:textSize="20sp"
        app:backgroundTint="#4A4949"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/mul"
        android:layout_width="178dp"
        android:layout_height="66dp"
        android:layout_marginTop="72dp"
        android:fontFamily="serif"
        android:onClick="doMul"
        android:text="@string/multiply"
        android:textSize="20sp"
        app:backgroundTint="#4A4949"
        app:layout_constraintEnd_toStartOf="@+id/div"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sum" />

    <Button
        android:id="@+id/div"
        android:layout_width="182dp"
        android:layout_height="73dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="serif"
        android:onClick="doDiv"
        android:text="@string/division"
        android:textSize="20sp"
        app:backgroundTint="#4A4949"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub" />

    <Button

        android:id="@+id/reset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:onClick="doReset"
        android:text="Reset"
        android:textSize="25sp"
        app:backgroundTint="#4A4949"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mul"
        app:layout_constraintVertical_bias="0.626" />

</androidx.constraintlayout.widget.ConstraintLayout>